First mobile version

--- a/.gitignore
+++ b/.gitignore
@@ -134,6 +134,16 @@ dist/
 build/
 out/
 
+# Capacitor
+android/app/build/
+android/.gradle/
+android/local.properties
+ios/App/build/
+ios/Pods/
+*.xcworkspace/xcuserdata/
+*.xcodeproj/xcuserdata/
+*.xcodeproj/project.xcworkspace/xcuserdata/
+
 # Test coverage
 coverage/
 .nyc_output/
